# spqlios-automorphism-bench

./: CMakeLists.txt  README.md  automorphisms.h  main.cpp  rlwe.cpp
